# OpenGL-Python

./: .gitignore  README.md  pyproject.toml
app/: Lab2.py  Lab3.py  Lab4.py  Lab5.py  Lab5_continued.py  Lab5_side_quest.py  Lab6.py  Lab7.py  cat.tga  cow.py  znanyprowadzocy1.tga  znanyprowadzocy2.tga
